--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.16.3",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "eslint": "^8.39.0",
@@ -32,6 +33,7 @@
     "argon2": "^0.30.3",
     "dotenv": "^16.0.3",
     "fastify": "^4.17.0",
+    "jsonwebtoken": "^9.0.0",
     "knex": "^2.4.2",
     "zod": "^3.21.4"
   }
