--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "knex": "node --no-warnings --loader tsx ./node_modules/.bin/knex",
-    "lint": "eslint src --ext .ts --fix && prettier --write src/**/*.ts"
+    "lint": "eslint src --ext .ts --fix && prettier --write src/**/*.ts",
+    "test": "vitest"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.16.3",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
@@ -26,8 +28,10 @@
     "eslint-plugin-promise": "^6.1.1",
     "prettier": "^2.8.8",
     "sqlite3": "^5.1.6",
+    "supertest": "^6.3.3",
     "tsx": "^3.12.7",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "vitest": "^0.31.0"
   },
   "dependencies": {
     "argon2": "^0.30.3",
