--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "tsx watch src/server.ts",
     "knex": "node --no-warnings --loader tsx ./node_modules/.bin/knex",
     "lint": "eslint src --ext .ts --fix && prettier --write src/**/*.ts",
-    "test": "vitest"
+    "test": "vitest --single-thread --reporter='verbose'"
   },
   "keywords": [],
   "author": "",
